2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el: Define a new minor mode `w3m-antenna-mode'.
	(w3m-antenna-mode-map, w3m-antenna-mode): New variables.
	(w3m-antenna-mode, w3m-antenna-mode-setter, w3m-antenna-edit): New
	functions.

	* w3m-bookmark.el (w3m-bookmark-mode): Change its interactive
	spec, and improve its document.

	* w3m-favicon.el (w3m-favicon-retrieve): Abolish the 4th argument
	`handler' and wrap the asynchronous processing forms with
	`w3m-process-with-null-handler', in order to clarify this
	function's purpose.

	* w3m.el (w3m-message): Use `walk-windows' instead of `window-list',
	because the latter is not available at Meadow and Mule2.
	(w3m-w3m-retrieve): Check the status code.
	(w3m-show-error-information): Also use retrieved error pages.
	(w3m-minor-mode): Change its interactive spec.

2003-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-convert): Make sure data of the ico
	type contains the correct magic numbers.

2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-util.el (w3m-last-visited-buffer): Abolished.
	(w3m-popup-buffer): Do not reset the above variable.

	* w3m.el (w3m-close-window): Do not set the above variable.
	(w3m): Do not refer the above variable.

2003-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Use `w3m-message' instead of
	`message'; don't let it be controlled by `w3m-verbose'.
	(w3m-alive-p): Don't sort the return value of `list-buffers' so
	that it returns the last visited emacs-w3m buffer as much as
	possible; don't inline the `w3m-list-buffers' function.

2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-verbose): Change its default value to nil.
	(w3m-message): When `w3m-verbose' is nil, display messages without
	logging.
	(w3m-make-help-echo, w3m-toggle-inline-image, w3m-zoom-in-image,
	w3m-zoom-out-image, w3m-view-this-url, w3m-submit-form,