@@ -146,7 +146,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.946 $"))
+    (let ((rev "$Revision: 1.947 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (format "1.3.%d"
 		   (- (string-to-number (match-string 1 rev)) 642)))))
@@ -7953,10 +7953,10 @@ FROM-COMMAND is defined to `w3m-minor-mode-map' for same keys in
 (defun w3m-minor-mode (&optional arg)
   "Minor mode to view text/html part in articles."
   (interactive "P")
-  (prog1 (setq w3m-minor-mode
-	       (if arg
-		   (> (prefix-numeric-value arg) 0)
-		 (not w3m-minor-mode)))
+  (when (setq w3m-minor-mode
+	      (if arg
+		  (> (prefix-numeric-value arg) 0)
+		(not w3m-minor-mode)))
     (run-hooks 'w3m-minor-mode-hook)))
 
 
